# modularizacion

./: .dev.env  LICENSE  README.md  pyproject.toml  requirements.txt  run.sh
comentarios/: models.py  urls.py  views.py
comentarios/migrations/: 0001_initial.py
comentarios/templates/: index.html
company/: models.py  views.py
company/migrations/: 0001_initial.py
manytomany/: models.py  urls.py  views.py
manytomany/migrations/: 0001_initial.py
manytoone/: models.py  views.py
manytoone/migrations/: 0001_initial.py
modularizacion/: settings.py  urls.py
onetoone/: models.py  urls.py  views.py
onetoone/migrations/: 0001_initial.py
post/: models.py  urls.py  views.py
post/migrations/: 0001_initial.py
templates/post/: queris.html
