[tool.poetry]
name = "p-modulos"
version = "0.1.0"
description = "practicas de curso django modularizacion"
authors = ["Roberto Parra Mesino <robertoparra99@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "modularizacion"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
